Fixed connection to the service and added a menu <md-toolbar> changed <md-icon>

--- a/src/app/homwork-5/homwork-5.component.html
+++ b/src/app/homwork-5/homwork-5.component.html
@@ -1,19 +1,36 @@
 
-<!--<md-toolbar color="primary">
-  <div class="example-button-row">
-      <a md-button routerLink=".">Flat button</a>
-      
-      <button md-button>Подробнее</button>
+<md-toolbar>
+  <button (click)="sidenav.toggle()" class="toolbar-button" md-mini-fab><md-icon>menu</md-icon></button>
+  <div class="toolbar-button-row">
+    <a md-button
+      *ngFor="let topLink of links" href="#">
+      <md-icon>{{topLink.icon}}</md-icon> &nbsp; {{topLink.label}}
+    </a>
   </div>
-</md-toolbar>-->
-
-<md-toolbar color="primary">
-  <span>Custom Toolbar</span>
+  <span>{{title}}</span>
 </md-toolbar>
 
+<md-sidenav-container>
+  <md-sidenav #sidenav mode="over" class="app-sidenav">
+    <nav>
+      <a md-button
+        class="nav-link"
+        *ngFor="let link of links"
+        href="#">
+        <md-icon>{{link.icon}}</md-icon> &nbsp; {{link.label}}
+      </a>
+    </nav>
+  </md-sidenav>
+
+  <!--<div class="app-content">
+    <film-list></film-list>
+  </div>-->
+</md-sidenav-container>
 
 
-<md-toolbar>
+
+
+<!--<md-toolbar>
   <button  class="toolbar-button" md-mini-fab><md-icon>menu</md-icon></button>
   <div class="toolbar-button-row">
     <a md-button>
@@ -21,9 +38,9 @@
     </a>
   </div>
   <span>Список важных задач</span>
-</md-toolbar>
+</md-toolbar>-->
 
-<md-sidenav-container>
+<!--<md-sidenav-container>
   <md-sidenav #sidenav mode="over" class="app-sidenav">
     <nav>
       <a md-button class="nav-link">
@@ -35,4 +52,4 @@
   <div class="app-content">
     
   </div>
-</md-sidenav-container>
+</md-sidenav-container>-->
