input output work korect, fix 2 problem

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <app-homwork-5> </app-homwork-5>
+<app-film-search></app-film-search>
 <app-film> </app-film>
 
 <!--<app-time-homwork></app-time-homwork>-->
