fix search  now search is work

--- a/src/app/film-card/film-card.component.css
+++ b/src/app/film-card/film-card.component.css
@@ -11,3 +11,13 @@
 .example-form{
     margin-bottom: 50px;
 }
+
+/* .film-card{
+  height: 1000px;
+  
+  } */
+
+/* img{
+  height: 400px;
+  weight: 200px;
+} */
