--- a/src/app/film-search/film-search.component.css
+++ b/src/app/film-search/film-search.component.css
@@ -13,7 +13,7 @@
 .button-row {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+   justify-content: center; 
 }
 .search-component{
     background-color: #ebeef4;
