addFilm-worc corect (concat)

--- a/src/app/film-card/film-card.component.html
+++ b/src/app/film-card/film-card.component.html
@@ -1,5 +1,23 @@
-<md-card class="film-card" >
-  <img md-card-image src="{{filmItem.Poster}}">
+  <!-- *ngIf = "visualTypeOfCard === 1"  -->
+<md-card class="film-card" *ngIf = "visualTypeOfCard === 1">  
+  <img height="500px" md-card-image src="{{filmItem.Poster}}">
+  <md-card-content>
+    <md-card-title>{{filmItem.Title}}</md-card-title>
+    <p>Производство: {{filmItem.Production}}</p>
+    <p>Год: {{filmItem.Year}}</p>
+     <p>Страна: {{filmItem.Country}}</p>
+    <p>Релиз: {{filmItem.Released}}</p>
+    <p> {{filmItem.Plot}}</p> 
+    <p>Айди фильма: {{filmItem.imdbID}}</p>
+  </md-card-content>
+  <md-card-actions>
+    <button md-button>Подробнее</button>
+  </md-card-actions>
+</md-card>
+
+
+<md-card class="film-card" *ngIf = "visualTypeOfCard === 2" >
+  <!-- <img md-card-image src="{{filmItem.Poster}}"> -->
   <md-card-content>
     <md-card-title>{{filmItem.Title}}</md-card-title>
     <p>Производство: {{filmItem.Production}}</p>
