--- a/src/app/film-card/film-card.component.html
+++ b/src/app/film-card/film-card.component.html
@@ -1,5 +1,5 @@
   <!-- *ngIf = "visualTypeOfCard === 1"  -->
-<md-card class="film-card" *ngIf = "visualTypeOfCard === 1">  
+<md-card class="film-card" *ngIf = "visualTypeOfCard === '1'">  
   <img height="500px" md-card-image src="{{filmItem.Poster}}">
   <md-card-content>
     <md-card-title>{{filmItem.Title}}</md-card-title>
@@ -16,7 +16,7 @@
 </md-card>
 
 
-<md-card class="film-card" *ngIf = "visualTypeOfCard === 2" >
+<md-card class="film-card" *ngIf = "visualTypeOfCard === '2'" >
   <!-- <img md-card-image src="{{filmItem.Poster}}"> -->
   <md-card-content>
     <md-card-title>{{filmItem.Title}}</md-card-title>
