--- a/src/app/homwork-5/homwork-5.component.html
+++ b/src/app/homwork-5/homwork-5.component.html
@@ -1,5 +1,5 @@
 
-<md-toolbar>
+<md-toolbar id="yakor">
   <button (click)="sidenav.toggle()" class="toolbar-button" md-mini-fab><md-icon>menu</md-icon></button>
   <div class="toolbar-button-row">
     <a md-button
